Login validation and custom Input component

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,8 @@
 body {
   margin: 0;
   background-color: rgba(16, 24, 32, 1);
+  font-family: 'Open Sans', 'Lato', sans-serif;
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  box-sizing: border-box;
 }
