--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -12,17 +12,44 @@
     padding: 0 10%;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     z-index: 10;
+    font-family: 'Open Sans', 'Lato', sans-serif;
   }
-  /* .init(red: 241/244, green: 170/244, blue: 76/244, alpha: 1) */
+
+  .header ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: baseline;
+  }
+
+  .header li {
+    margin: 0 1rem;
+  }
 
   .logo {
     color: rgb(180, 133, 72);
-    justify-self: center;
     cursor: pointer;
     text-decoration: none;
     font-size: 2rem;
+    margin:0;
   }
 
-  .logo:hover{
+ .link { 
+    font: inherit;
+    background-color: transparent;
+    border: 1px solid rgb(180, 133, 72);
+    color: rgb(180, 133, 72);
+    font-weight: bold;
+    padding: 0.5rem 1.5rem;
+    border-radius: 6px;
+    cursor: pointer;
+    text-decoration: none;
+  }
+  .link:hover{
+      color: rgb(136, 98, 48);
+  }
+
+  .logo:hover,:active{
     color: rgb(136, 98, 48);
   }
