--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,13 +3,13 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 6rem;
+    height: 10%;
     background-color: rgba(16, 24, 32);
     color: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 10%;
+    padding: 0 3%;
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     z-index: 10;
     font-family: 'Open Sans', 'Lato', sans-serif;
