--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -20,19 +20,13 @@
     margin: 0;
     padding: 0;
     display: flex;
-    align-items: baseline;
+    align-items: center;
+    justify-content: center;
+    height: 80px;
   }
 
   .header li {
     margin: 0 1rem;
-  }
-
-  .logo {
-    color: rgb(180, 133, 72);
-    cursor: pointer;
-    text-decoration: none;
-    font-size: 2rem;
-    margin:0;
   }
 
  .link { 
@@ -46,6 +40,7 @@
     cursor: pointer;
     text-decoration: none;
   }
+  
   .link:hover{
       color: rgb(136, 98, 48);
   }
