--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,10 +1,10 @@
 .header {
-    position: fixed;
+    position:relative;
     top: 0;
     left: 0;
     width: 100%;
-    height: 10%;
-    background-color: rgba(16, 24, 32);
+    /* height: 20%; */
+    background-color: rgb(28, 39, 49);
     color: white;
     display: flex;
     justify-content: space-between;
@@ -40,7 +40,7 @@
     cursor: pointer;
     text-decoration: none;
   }
-  
+
   .link:hover{
       color: rgb(136, 98, 48);
   }
