--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   margin: 0;
-  background-color: rgba(16, 24, 32, 1);
+  background-color: rgb(28, 39, 49);
   font-family: 'Open Sans', 'Lato', sans-serif;
 }
 * {
