--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,9 +1,9 @@
 .header {
-    position:relative;
+    position:absolute;
     top: 0;
     left: 0;
     width: 100%;
-    /* height: 20%; */
+    height: 100px;
     background-color: rgb(28, 39, 49);
     color: white;
     display: flex;
