--- a/src/components/UI/Input/Input.module.css
+++ b/src/components/UI/Input/Input.module.css
@@ -1,5 +1,5 @@
 .control {
-    margin: 1rem 0;
+    margin: 0.5rem 0;
     display: flex;
     align-items: stretch;
     flex-direction: column;
@@ -10,17 +10,17 @@
     display: block;
   }
   
-  /* .control label {
+  .control label {
     font-weight: bold;
     flex: 1;
     color: #383838;
-    margin-bottom: 0.5rem;
+    /* margin-bottom: 0.5rem; */
   }
-   */
+  
   .control input {
     flex:none;
     font: inherit;
-    /* padding: 0.35rem 0.35rem; */
+    padding: 0.35rem 0.35rem;
     border-radius: 6px;
     width: 100%;
     height: 50px;
