Insert inputs completed

--- a/src/components/Main/DeletePopup/DeletePop.module.css
+++ b/src/components/Main/DeletePopup/DeletePop.module.css
@@ -1,7 +1,7 @@
 .delete {
     position: absolute;
-    width: 400px;
-    height: 100px;
+    width: 300px;
+    height: 150px;
     display: flex;
     top: 50%;
     left: 50%;
@@ -10,21 +10,38 @@
     box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
     background-color: white;
     justify-content: space-around;
+    flex-direction: column;
     align-items: center;
 }
 
 .delete button {
-    height: 30px;
-    width: 50px;
-    display: flex;
-    justify-content: space-around;
-    align-self:center;
+    height: 40px;
+    width: 80px;
     color:black;
-    padding: 15px;
-    justify-self: center;
-    align-self: center;
+    align-items: center;
     background: white;
     border: 1px solid rgb(180, 133, 72);
     border-radius: 5px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.50);
+}
+
+.delete button:hover {
+    color: white;
+    background: rgb(155, 129, 95);
+    border: 0px;
+}
+
+.delete div {
+    width: 100%;
+    justify-content: space-around;
+    align-self:center;
+    display: flex;
+    margin: 10px;
+}
+
+.delete label {
+    font-weight: bold;
+    flex: 1;
+    margin-top: 15px;
+    color: #383838;
 }
